fixing alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,6 +52,10 @@ main.login-form {
   position: relative;
 }
 
+section.sign-in-form {
+  padding-left: 38px;
+}
+
 label {
   font-size: 15.5pt;
   text-align: left;
@@ -122,7 +126,7 @@ a:hover {
     background-color: #d37538;
     width: 32%;
     font-weight: bold;
-    margin-left: 25%;
+    margin-left: 27%;
     border: solid #d37538;
     font-weight: bolder;
     font-size: 13pt;
